# model_inheritance

./: .env  README.md  db.sqlite3  pyproject.toml
apps/quiz/: models.py
apps/quiz/migrations/: 0001_initial.py
config/: settings.py  urls.py
