[tool.poetry]
name = "model_inheritance"
version = "0.1.0"
description = "Django Model Inheritance"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
python-decouple = "^3.6"
black = "^22.1.0"
mypy = "^0.941"
isort = "^5.10.1"
flake8 = "^4.0.1"
ipython = "^8.1.1"
dj-database-url = "^0.5.0"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
